--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -380,6 +380,19 @@ h6 {
     color: var(--contrast-color);
     transform: rotate(180deg);
   }
+  .social-links a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid color-mix(in srgb, var(--default-color), transparent 50%);
+    font-size: 16px;
+    color: color-mix(in srgb, var(--default-color), transparent 30%);
+    margin-right: 10px;
+    transition: 0.3s;
+  }
 
   .navmenu .dropdown ul {
     position: static;
